# django-inertia-todo

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.js
assets/js/: app.jsx  common.js
assets/js/Layouts/: AppMenu.jsx  AppMenuItem.jsx  AppSidebar.jsx  Header.jsx  Layout.jsx
assets/js/Layouts/context/: menucontext.jsx
assets/js/Pages/: Create.jsx  Todos.jsx
assets/js/components/: TodoCreate.jsx  TodoEdit.jsx  TodoEditModal.jsx  TodoList.jsx  TodoListDatatable.jsx
django_reactjs/: settings.py  urls.py
templates/: base.html
todos/: urls.py  utils.py  views.py
todos/migrations/: 0001_initial.py
todos/templates/todos/: app.html
